--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -16,6 +16,14 @@
 /*fonts implementation
 */
 
+@font-face {
+	font-family: 'Myriad Pro';
+	src: url('/public/fonts/MyriadPro-Regular.eot');
+	src: local('☺'), url('/public/fonts/MyriadPro-Regular.woff') format('woff'), url('/public/fonts/MyriadPro-Regular.ttf') format('truetype'), url('/public/fonts/MyriadPro-Regular.svg') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
 /*
  * Contents
  *
