--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -111,7 +111,7 @@ h1, h2, h3, h4, h5, h6 {
   padding-top:    1rem;
   padding-bottom: 1rem;
   margin-bottom: 3rem;
-  border-bottom: 1px solid #eee;
+  border-bottom: none;
 }
 .masthead-title {
   margin-top: 0;
@@ -227,7 +227,7 @@ a.sidebar-nav-item:focus {
   width: 2.2rem;
   padding: .5rem .65rem;
   color: #505050;
-  background-color: #fff;
+  
   border-radius: 4px;
   cursor: pointer;
 }
@@ -319,10 +319,20 @@ a.sidebar-nav-item:focus {
  * page is wrapped in `.page` and is only used on the page layout.
  */
 
-.page,
-.post {
-  margin-bottom: 4em;
-  color: #000000;
+.page, .post {
+    background-color: #fff;
+    margin: 5% 7% 5% 7%;
+    padding: 2% 5% 5% 5%;
+}
+.post{
+    display: block;
+    box-shadow: 0px 0px 10px #555;
+    
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    -webkit-box-shadow: 0 0 10px #555;
 }
 
 /* Blog post or page title */
@@ -346,16 +356,23 @@ a.sidebar-nav-item:focus {
 
 /* Related posts */
 .related {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-  border-top: 1px solid #eee;
+    display: block;
+    box-shadow: 0px 0px 10px #555;
+    background-color: #fff;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    -webkit-box-shadow: 0 0 10px #555;
 }
 .related-posts {
-  padding-left: 0;
-  list-style: none;
+    list-style: none;
 }
-.related-posts h3 {
-  margin-top: 0;
+.related-posts h2 {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 .related-posts li small {
   font-size: 75%;
