--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -343,7 +343,7 @@ a.sidebar-nav-item:focus {
 }
 .page-title,
 .post-title {
-  margin-top: 0;
+  margin-top: 1.5em;
 }
 
 /* Meta data line below post title */
