--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -204,7 +204,8 @@ blockquote p:last-child {
 
 img {
     display: block;
-    width: auto;
+    max-width: 100%;
+    width: 100%;
     height: auto;
     box-shadow: 0px 0px 10px #555;
     border-radius: 6px;
@@ -317,7 +318,7 @@ tbody tr:nth-child(odd) th {
 
 .post {
   margin-bottom: 4em;
-  
+
 }
 
 /* Blog post or page title */
