--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -205,7 +205,6 @@ blockquote p:last-child {
 img {
     display: block;
     max-width: 100%;
-    width: 100%;
     height: auto;
     box-shadow: 0px 0px 10px #555;
     border-radius: 6px;
@@ -214,6 +213,8 @@ img {
     margin-top: 10px;
     margin-bottom: 10px;
     -webkit-box-shadow: 0 0 10px #555;
+    border: 1px solid #ddd;
+    border-radius: 6px; 
 }
 
 
