--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -156,7 +156,7 @@ code {
   font-size: 85%;
   color: #bf616a;
   background-color: #f9f9f9;
-  border-radius: 3px;
+  border-radius: 5px;
 }
 pre {
   display: block;
@@ -190,7 +190,7 @@ blockquote {
   padding: .5rem 1rem;
   margin: .8rem 0;
   color: #7a7a7a;
-  border-left: .25rem solid #e5e5e5;
+  border-left: .25rem solid #a4cfff;
 }
 blockquote p:last-child {
   margin-bottom: 0;
@@ -207,14 +207,14 @@ img {
     max-width: 100%;
     height: auto;
     box-shadow: 0px 0px 10px #555;
-    border-radius: 6px;
+    border-radius: 5px;
     margin-left: auto;
     margin-right: auto;
     margin-top: 10px;
     margin-bottom: 10px;
     -webkit-box-shadow: 0 0 10px #555;
     border: 1px solid #ddd;
-    border-radius: 6px; 
+    border-radius: 6px;
 }
 
 
@@ -222,7 +222,8 @@ img {
 table {
   margin-bottom: 1rem;
   width: 100%;
-  border: none;
+  border: 1px solid #e5e5e5;
+  border-radius: 5px;
   border-collapse: collapse;
 }
 td,
@@ -258,8 +259,7 @@ tbody tr:nth-child(odd) th {
 .message {
   margin-bottom: 1rem;
   padding: 1rem;
-  color: #ff4700;
-  background-color: #ffca5b;
+  background-color: #91c5ff;
   border-radius: 5px;
 }
 
