--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -190,7 +190,7 @@ blockquote {
   padding: .5rem 1rem;
   margin: .8rem 0;
   color: #7a7a7a;
-  border-left: .25rem solid #a4cfff;
+  border-left: .25rem solid #b8b8b8;
 }
 blockquote p:last-child {
   margin-bottom: 0;
