--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -227,7 +227,7 @@ a.sidebar-nav-item:focus {
   width: 2.2rem;
   padding: .5rem .65rem;
   color: #505050;
-  
+
   border-radius: 4px;
   cursor: pointer;
 }
@@ -321,13 +321,15 @@ a.sidebar-nav-item:focus {
 
 .page, .post {
     background-color: #fff;
-    margin: 5% 7% 5% 7%;
+		display: block;
+    box-shadow: 0px 0px 10px #555;
+		-webkit-box-shadow: 0 0 10px #555;
     padding: 2% 5% 5% 5%;
 }
 .post{
     display: block;
     box-shadow: 0px 0px 10px #555;
-    
+
     margin-left: auto;
     margin-right: auto;
     margin-top: 10px;
