--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -66,6 +66,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 
+
 /*
  * Wrapper
  *
@@ -400,7 +401,7 @@ a.sidebar-nav-item:focus {
   overflow: hidden; /* clearfix */
   margin-left: -1rem;
   margin-right: -1rem;
-  font-family: "PT Sans", Helvetica, Arial, sans-serif;
+  font-family: "Myriad Pro", Helvetica, Arial, sans-serif;
   color: #ccc;
   text-align: center;
 }
