--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -65,6 +65,8 @@ body {
       -ms-text-size-adjust: 100%;
 }
 
+
+
 /* No `:visited` state is required by default (browsers will use `a`) */
 a {
   color: #268bd2;
@@ -378,7 +380,7 @@ tbody tr:nth-child(odd) th {
   overflow: hidden; /* clearfix */
   margin-left: -1rem;
   margin-right: -1rem;
-  font-family: "PT Sans", Helvetica, Arial, sans-serif;
+  font-family: "Myriad Pro", Helvetica, Arial, sans-serif;
   color: #ccc;
   text-align: center;
 }
