force https redirect

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -24,4 +24,11 @@
   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/public/apple-touch-icon-144-precomposed.png">
   <link rel="shortcut icon" href="/public/favicon.ico">
 
+  <script> 
+ var host = "lingduo.net.cn"; 
+ if ((host == window.location.host) && (window.location.protocol != "https:")) 
+     window.location.protocol = "https"; 
+ </script> 
+
+
 </head>
