--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -243,7 +243,7 @@ tbody tr:nth-child(odd) th {
 
 .lead {
   font-size: 1.25rem;
-  font-weight: 300;
+  font-weight: 250;
 }
 
 
@@ -259,7 +259,7 @@ tbody tr:nth-child(odd) th {
   padding: 1rem;
   background-color: #91c5ff;
   border-radius: 5px;
-  font-family: "Myriad Pro", "Microsoft YaHei Light", "Lucida Grande", "Microsoft YaHei",serif;
+  font-family: "Myriad Pro", "Microsoft YaHei Light", "Microsoft YaHei",serif;
 }
 
 
