--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -26,10 +26,10 @@
     {% endfor %}
 
     <a class="sidebar-nav-item" href="{{ site.github.repo }}">View on GitHub</a>
-    <a class="sidebar-nav-item" class="message" href="/great-things">Great Things</a>
+    <a class="sidebar-nav-item" href="/great-things">Great Things</a>
   <div class="sidebar-item">
     <m>
-      Proudly hosted on <a href="pages.github.com">GitHub Pages</a>.
+      Proudly hosted on <a href="https://pages.github.com">GitHub Pages</a>.
     </m>
    </nav>
   </div>
