--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,5 +21,7 @@
   <!-- Icons -->
   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/public/apple-touch-icon-144-precomposed.png">
   <link rel="shortcut icon" href="/public/favicon.ico">
+  <!-- Tencent Analysis -->
+<script type="text/javascript" src="http://tajs.qq.com/stats?sId=53964127" charset="UTF-8"></script> 
 
 </head>
