--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,13 @@
 <head>
+
+  <!-- Tencent Analysis -->
+  <script type="text/javascript" src="http://tajs.qq.com/stats?sId=53964127" charset="UTF-8"></script> 
   <link href="http://gmpg.org/xfn/11" rel="profile">
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
+  <!-- Tencent Speed Testing -->
+  <script type="text/javascript">
+    var _speedMark = new Date();
+  </script>
 
   <!-- Enable responsiveness on mobile devices-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
@@ -21,7 +28,5 @@
   <!-- Icons -->
   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/public/apple-touch-icon-144-precomposed.png">
   <link rel="shortcut icon" href="/public/favicon.ico">
-  <!-- Tencent Analysis -->
-<script type="text/javascript" src="http://tajs.qq.com/stats?sId=53964127" charset="UTF-8"></script> 
 
 </head>
