--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,9 +1,7 @@
 <head>
 
   <!-- Tencent Analysis -->
-  <script type="text/javascript" src="http://tajs.qq.com/stats?sId=53964127" charset="UTF-8"></script> 
-  <link href="http://gmpg.org/xfn/11" rel="profile">
-  <meta http-equiv="content-type" content="text/html; charset=utf-8">
+  <script type="text/javascript" src="https://tajs.qq.com/stats?sId=53964127" charset="UTF-8"></script> 
   <!-- Tencent Speed Testing -->
   <script type="text/javascript">
     var _speedMark = new Date();
