--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,6 +10,13 @@
   <!-- Enable responsiveness on mobile devices-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
+<!-- Force https redirect -->
+<script type="text/javascript">
+ if (window.location.protocol !== 'https:') {
+    window.location = 'https://' + window.location.hostname + window.location.pathname + window.location.hash;
+}
+</script>
+
   <title>
     {% if page.title %}
       {{ page.title }} &middot; {{ site.title }}
