--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -314,6 +314,13 @@ tbody tr:nth-child(odd) th {
 
 .page {
   background-color: #b4b4b4;
+  display: block;
+    box-shadow: 0px 0px 10px #555;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    -webkit-box-shadow: 0 0 10px #555;
 }
 
 .post {
