fix chinese display issue

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,12 +1,5 @@
 <head>
 
-<!-- Force https redirect -->
-<script type="text/javascript">
- if (window.location.protocol !== 'https:') {
-    window.location = 'https://' + window.location.hostname + window.location.pathname + window.location.hash;
-}
-</script>
-
   <!-- Tencent Analysis -->
   <script type="text/javascript" src="https://tajs.qq.com/stats?sId=53964127" charset="UTF-8"></script> 
   <!-- Tencent Speed Testing -->
@@ -16,6 +9,8 @@
 
   <!-- Enable responsiveness on mobile devices-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
+
+<meta charset="utf-8" />
 
   <title>
     {% if page.title %}
