--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,11 @@
 <head>
 
+<!-- force js https redirect -->
+<script type="text/javascript">
+    if (window.location.protocol != "https:")
+    window.location.href = "https:" + window.location.href.substring(window.location.protocol.length);
+</script>
+
   <!-- Enable responsiveness on mobile devices-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
