--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,6 +5,12 @@
 
   <meta charset="utf-8" />
 
+  <!-- force js https redirect -->
+<script type="text/javascript">
+    if (window.location.protocol != "https:")
+    window.location.href = "https:" + window.location.href.substring(window.location.protocol.length);
+</script>
+
   <title>
     {% if page.title %}
       {{ page.title }} &middot; {{ site.title }}
