--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<div class="page">
-  <h1 class="page-title">{{ page.title }}</h1>
+<div class="container content">
+  <h1 class="post-title" style="text-align: center;">{{ page.title }}</h1>
   {{ content }}
 </div>
