--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,9 +2,10 @@
 layout: default
 ---
 
-<div class="post">
-  <h1 class="post-title">{{ page.title }}</h1>
-  <span class="post-date">{{ page.date | date_to_string }}</span>
-  {{ content }}
+<div class="content container">
+    <div class="post-date">
+        <time>{{ page.date | date: '%B %d, %Y '}}</time>
+    </div>
+    <h1 class="post-title">{{ page.title }}</h1>
+    {{ content }}
 </div>
-
