--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,11 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script> 
+        var host = "lingduo.net.cn"; 
+        if ((host == window.location.host) && (window.location.protocol != "https:")) 
+        window.location.protocol = "https"; 
+    </script> 
     {% if page.url == "/404.html" %}
         <meta http-equiv="refresh" content="5; url=/">
     {% endif %}
