--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -33,7 +33,7 @@
             <a href="/privacy" class="button">
                 Privacy
             </a>
-            <a target="_blank" href="/i" class="button">
+            <a href="/i" class="button">
                 Interesting
             </a>
         </div>
