force https redirect

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,6 +12,13 @@
     <link href="/css/syntax.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="/css/font-awesome.css">
     <link rel="stylesheet" type="text/css" href="/css/font.css">
+
+    <script> 
+        var host = "lingduo.net.cn"; 
+        if ((host == window.location.host) && (window.location.protocol != "https:")) 
+        window.location.protocol = "https"; 
+    </script>
+
 </head>
 
 <body>
