--- a/_includes/header.html
+++ b/_includes/header.html
@@ -45,7 +45,7 @@
                       <li class="active"><a target=_blank href="https://github.com/{{ site.github }}">GitHub</a></li>
                     {% endif %}
                     <li class="active"><a href="{{ site.baseurl }}/privacy/">Privacy</a></li>
-                    <li class="active"><a href="{{ site.baseurl }}/i/">Interesting</a></li>
+                    <li class="active"><a href="{{ site.baseurl }}/i">Interesting</a></li>
                 </ul>
               </div>
         </div>
