--- a/_includes/header.html
+++ b/_includes/header.html
@@ -44,7 +44,7 @@
                     {% if site.github != '' %}
                       <li class="active"><a target=_blank href="https://github.com/{{ site.github }}">GitHub</a></li>
                     {% endif %}
-                    <li class="active"><a href="{{ site.baseurl }}/privacy/">Privacy</a></li>
+                    <li class="active"><a href="{{ site.baseurl }}/privacy">Privacy</a></li>
                     <li class="active"><a href="{{ site.baseurl }}/i">Interesting</a></li>
                 </ul>
               </div>
