--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,10 +15,10 @@
   </title>
 
   <!-- CSS links -->
-  <link rel="stylesheet" href="{{ site.baseurl }}/public/css/syntax.css"/>
-  <link rel="stylesheet" href="{{ site.baseurl }}/public/css/ed.css"/>
+  <link rel="stylesheet" href="/public/css/syntax.css"/>
+  <link rel="stylesheet" href="/public/css/ed.css"/>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css"/>
-  
+
   <!-- Icons -->
-  <link rel="shortcut icon" href="{{ site.baseurl }}/public/a.ico"/>
+  <link rel="shortcut icon" href="/public/a.ico"/>
 </head>
