--- a/public/css/font.css
+++ b/public/css/font.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: 'MyriadPro-Light';
+  font-family: 'Myriad Pro Light';
   src: url('../fonts/MyriadPro-Light.woff') format('woff'),
        url('../fonts/MyriadPro-Light.ttf') format('truetype'),
        url('../fonts/MyriadPro-Light.svg#MyriadPro-Light') format('svg');
@@ -10,9 +10,10 @@
 
 @font-face {
   font-family: 'Myriad Pro Regular';
-  src: url('../fonts/MyriadPro-Regular.eot');
+  src: url('../fonts/MyriadPro-Regular.eot') format('embedded-opentype');
   src: url('../fonts/MyriadPro-Regular.woff2') format('woff2'),
-       url('../fonts/MyriadPro-Regular.eot?#iefix') format('embedded-opentype');
+       url('../fonts/MyriadPro-Regular.eot?#iefix') format('embedded-opentype'),
+       url('../fonts/MyriadPro-Regular.svg') format("svg");
   font-weight: normal;
   font-style: normal;
 }
