--- a/public/css/font.css
+++ b/public/css/font.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: 'Myriad Pro Light';
-  src: url('../fonts/MyriadPro-Light.woff') format('woff'),
-       url('../fonts/MyriadPro-Light.ttf') format('truetype'),
-       url('../fonts/MyriadPro-Light.svg#MyriadPro-Light') format('svg');
+  src: url('/public/fonts/MyriadPro-Light.woff') format('woff'),
+       url('/public/fonts/MyriadPro-Light.ttf') format('truetype'),
+       url('/public/fonts/MyriadPro-Light.svg#MyriadPro-Light') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -10,22 +10,22 @@
 
 @font-face {
   font-family: 'Myriad Pro Regular';
-  src: url('../fonts/MyriadPro-Regular.eot') format('embedded-opentype');
-  src: url('../fonts/MyriadPro-Regular.woff2') format('woff2'),
-       url('../fonts/MyriadPro-Regular.eot?#iefix') format('embedded-opentype'),
-       url('../fonts/MyriadPro-Regular.svg') format("svg");
+  src: url('/public/fonts/MyriadPro-Regular.eot') format('embedded-opentype');
+  src: url('/public/fonts/MyriadPro-Regular.woff2') format('woff2'),
+       url('/public/fonts/MyriadPro-Regular.eot?#iefix') format('embedded-opentype'),
+       url('/public/fonts/MyriadPro-Regular.svg') format("svg");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
 	font-family: 'Myriad Pro Semibold';
-	src: url('../fonts/MyriadPro-Semibold.eot');
-	src: url('../fonts/MyriadPro-Semibold.eot?#iefix') format('embedded-opentype'),
-		url('../fonts/MyriadPro-Semibold.woff2') format('woff2'),
-		url('../fonts/MyriadPro-Semibold.woff') format('woff'),
-		url('../fonts/MyriadPro-Semibold.ttf') format('truetype'),
-		url('../fonts/MyriadPro-Semibold.svg#MyriadPro-Semibold') format('svg');
+	src: url('/public/fonts/MyriadPro-Semibold.eot');
+	src: url('/public/fonts/MyriadPro-Semibold.eot?#iefix') format('embedded-opentype'),
+		url('/public/fonts/MyriadPro-Semibold.woff2') format('woff2'),
+		url('/public/fonts/MyriadPro-Semibold.woff') format('woff'),
+		url('/public/fonts/MyriadPro-Semibold.ttf') format('truetype'),
+		url('/public/fonts/MyriadPro-Semibold.svg#MyriadPro-Semibold') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
