--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,6 +17,7 @@
   <!-- CSS links -->
   <link rel="stylesheet" href="/public/css/syntax.css"/>
   <link rel="stylesheet" href="/public/css/ed.css"/>
+  <link rel="stylesheet" href="/public/css/font.css"/>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css"/>
 
   <!-- Icons -->
