--- a/public/css/ed.css
+++ b/public/css/ed.css
@@ -31,9 +31,13 @@ body {
 }
 
 html {
-  font-family: "Myriad Pro Regular", "Microsoft YaHei UI Light", "Microsoft YaHei", serif;
+  font-family: "Myriad Pro Light", "Microsoft YaHei UI Light", "Microsoft YaHei", serif;
   font-size: 16px;
   line-height: 1.5;
+}
+
+.introduction .message{
+  font-family: "Myriad Pro Regular", "Microsoft YaHei UI Light", "Microsoft YaHei", serif;
 }
 
 @media (min-width: 38em) {
