--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
       <div class="masthead">
         <div class="container">
           <h3 class="masthead-title">
-            <a href="{{ site.baseurl }}/" title="Home">{{ page.title }}</a>
+            <a href="/" title="Back home">{{ page.title }}</a>
             <br><small>{{ site.tagline }}</small>
           </h3>
         </div>
