--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,7 +23,7 @@ layout: default
     <div class="sidenav">
         <h2>Pages</h2>
         <ul class="artical-list">
-          {% for post in site.categories.pages%}
+          {% for post in site.categories.page%}
           <li><a href="{{ post.url }}">{{ post.title }}</a></li>
           {% endfor %}
         </ul>
