--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
     <!--
     * Author:         BeiYuu
     * Revised:        Mukosame
+	**Revised:	Lingduo
     -->
     <meta charset="utf-8" />
     <title>{% if page.title %}{{ page.title }} | {% endif %}{{ site.title }}</title>
