--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -17,6 +17,7 @@ layout:           default
     <div class="entry" style="margin-left: 15%; margin-right: 15%;">
         <h1 class="entry-title">{{ page.title }}</h1>
         {{ content }}
+	<p class="xyquote">{{ site.xyquote }}</p>
     </div>
 
 </div>
