--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,6 +18,7 @@ layout: default
         <h1 class="entry-title">{{ page.title }}</h1>
         <p class="entry-date">{{ page.date|date:"%Y年%m月%d日" }}</p>
         {{ content }}
+	<p class="xyquote">{{ site.xyquote }}</p>
     </div>
 
     <div class="sidenav">
