--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,7 +18,7 @@ layout: default
         <h1 class="entry-title">{{ page.title }}</h1>
         <p class="entry-date">{{ page.date|date:"%Y年%m月%d日" }}</p>
         {{ content }}
-	<p class="xyquote">{{ site.xyquote }}</p>
+	{% if site.xyquote %}<p class="xyquote">{{ site.xyquote }}</p>{% endif %}
     </div>
 
     <div class="sidenav">
