--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
     <meta name="author" content="Lingduo" />
     <meta name="renderer" content="webkit">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="refresh content="0;url=https://lingduo.net.cn/451">
+    <meta http-equiv="refresh" content="0;url=https://lingduo.net.cn/451">
     <link rel="stylesheet" href="/css/default.css" type="text/css" />
     <link rel="stylesheet" href="/css/notificationd.css" type="text/css" />
     <script src="/js/jquery-1.7.1.min.js" type="text/javascript"></script>
