committing nav page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,6 +33,7 @@
                 <li class="active"><a href="#">Blog</a></li>
                 <!--other links go here -->
 		<li><a href="/about">关于</a></li>
+		<li><a href="/nav">导航</a></li>
             </ul>
         </div>
     </div>
