--- a/css/home.css
+++ b/css/home.css
@@ -1,5 +1,5 @@
 body {
-    font-family: STFangSong, Helvetica, Arial, Vernada, Tahoma, STXihei, "Microsoft YaHei", "Songti SC", SimSun, Heiti, sans-serif;
+    font-family: Helvetica, Arial, Vernada, Tahoma, "Source Han Sans CN Regular", "Microsoft YaHei", "Songti SC", SimSun, Heiti, sans-serif;
     font-size: 18px;
 }
 
