--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,3 +45,9 @@
 </body>
 
 </html>
+	<script src="/js/jquery.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
+	<script src="/js/highlight.js"></script>
+	<script>
+		$('p').highlight(['yousa'], ['泠鸢'], ['冷鸟'], ['急冻鸟'], ['帝企鹅']);
+	</script>
