--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,3 +23,9 @@
     </body>
 </html>
 
+	<script src="/js/jquery.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
+	<script src="/js/highlight.js"></script>
+	<script>
+		$('p').highlight(['yousa'], ['??'], ['??'], ['???'], ['???']);
+	</script>
